force-app/main/default/objects/Financial_Account__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <description>Street address line 1 for mailing address.</description>
    <label>Address 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>