force-app/main/default/objects/Financial_Account__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <description>Street address line 2 for mailing address.</description>
    <label>Address 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>