force-app/main/default/objects/Financial_Account__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>Date when the client submitted the financial account application.</description>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>