force-app/main/default/objects/Financial_Account__c/fields/Balance_Last_Statement__c.field-meta.xml
<CustomField>
    <fullName>Balance_Last_Statement__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Balance Last Statement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>