force-app/main/default/objects/Financial_Account__c/fields/Financial_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Type__c</fullName>
    <label>Financial Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Discount Brokerage</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Cash Management Account</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Fixed Annuity</fullName>
            </value>
            <value>
                <fullName>Variable Annuity</fullName>
            </value>
            <value>
                <fullName>Managed Account</fullName>
            </value>
            <value>
                <fullName>Individual Life</fullName>
            </value>
            <value>
                <fullName>Term Life</fullName>
            </value>
            <value>
                <fullName>Variable Life</fullName>
            </value>
            <value>
                <fullName>Whole Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>