force-app/main/default/objects/Financial_Account__c/fields/Held_Away__c.field-meta.xml
<CustomField>
    <fullName>Held_Away__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this financial account is managed or administered by our firm.</description>
    <label>Held Away</label>
    <type>Checkbox</type>
</CustomField>