force-app/main/default/objects/Financial_Account__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Household that this financial account rolls up to.</description>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts (Household)</relationshipLabel>
    <relationshipName>HouseholdFinancialAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>