force-app/main/default/objects/Financial_Account__c/fields/Joint_Owner__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts (Joint Owner)</relationshipLabel>
    <relationshipName>FAJointOwner</relationshipName>
    <type>Lookup</type>
</CustomField>