force-app/main/default/objects/Financial_Account__c/fields/Lien_Holder__c.field-meta.xml
<CustomField>
    <fullName>Lien_Holder__c</fullName>
    <label>Lien Holder</label>
    <length>200</length>
    <type>Text</type>
</CustomField>