force-app/main/default/objects/Financial_Account__c/fields/Loan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_End_Date__c</fullName>
    <label>Loan End Date</label>
    <type>Date</type>
</CustomField>