force-app/main/default/objects/Financial_Account__c/fields/Loan_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_months__c</fullName>
    <label>Loan Term(months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>