force-app/main/default/objects/Financial_Account__c/fields/Minimum_Balance__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minimum Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>