force-app/main/default/objects/Financial_Account__c/fields/Paperless_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Paperless_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deliver documents electronically.</description>
    <label>Paperless Delivery</label>
    <type>Checkbox</type>
</CustomField>