force-app/main/default/objects/Financial_Account__c/fields/Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Account ( Primary Owner )</relationshipLabel>
    <relationshipName>ClientFinancialAccounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>