force-app/main/default/objects/Financial_Account__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <description>Custodian or recordkeeper of this financial account.</description>
    <label>Service Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>