force-app/main/default/objects/Financial_Account__c/recordTypes/Auto_Loan.recordType-meta.xml
<RecordType>
    <fullName>Auto_Loan</fullName>
    <active>true</active>
    <description>Represents a type of loan for financing a purchase of a motor vehicle.</description>
    <label>Auto Loan</label>
</RecordType>