force-app/main/default/objects/Financial_Account__c/recordTypes/Bank_Account.recordType-meta.xml
<RecordType>
    <fullName>Bank_Account</fullName>
    <active>true</active>
    <description>Bank accounts such as savings, checking, and credit</description>
    <label>Bank Account</label>
</RecordType>