force-app/main/default/objects/Financial_Account__c/recordTypes/Mortgage.recordType-meta.xml
<RecordType>
    <fullName>Mortgage</fullName>
    <active>true</active>
    <description>Represents a type of loan for financing a purchase of real property.</description>
    <label>Mortgage</label>
</RecordType>